--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,26 +4,39 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-logomodern-business-nav/blob/master/LICENSE)
  */
 
-body {
-  padding-top: 54px;
-}
+ body {font-family: "Lato", sans-serif;}
 
-@media (min-width: 992px) {
-  body {
-    padding-top: 56px;
-  }
-}
+ .sidebar {
+   height: 100%;
+   width: 160px;
+   position: fixed;
+   z-index: 1;
+   top: 0;
+   left: 0;
+   background-color: #111;
+   overflow-x: hidden;
+   padding-top: 16px;
+ }
 
-.carousel-item {
-  height: 65vh;
-  min-height: 300px;
-  background: no-repeat center center scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+ .sidebar a {
+   padding: 6px 8px 6px 16px;
+   text-decoration: none;
+   font-size: 20px;
+   color: #818181;
+   display: block;
+ }
 
-.portfolio-item {
-  margin-bottom: 30px;
-}
+ .sidebar a:hover {
+   color: #f1f1f1;
+ }
+
+ .main {
+   margin-left: 160px; /* Same as the width of the sidenav */
+   padding: 0px 10px;
+ }
+
+ @media screen and (max-height: 450px) {
+   .sidebar {padding-top: 15px;}
+   .sidebar a {font-size: 18px;}
+ }
+
